--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 
 /* common styles and utilities */
 body{
+    margin: 0;
     font-family: 'Poppins', sans-serif;
 }
 /* banner section styles */
@@ -50,7 +51,74 @@ header{
     transition: transform 1s ease-in-out;
 }
 
-/* .photo-frame:hover .photo {
-    transform: scale(1.5) skew(-30deg);
-    transition: transform 2s ease-in-out;
-} */
+/* star players section style  */
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 70px;
+}   
+.star-players{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+    grid-row-gap: 27px;
+}
+
+.player{
+    padding: 15px;
+    width: 330px;
+    height: 474px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+}
+.player img{
+    width: 300px;
+    height: 256px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.player-name{
+    font-size: 28px;
+    margin: 10px 10px;
+}
+.player-info{
+    font-size: 16px;
+    color: #6C6C6C;
+    margin: 10px 10px;
+
+}
+
+/* footer section start  */
+footer{
+    margin-top: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+}
+.logo{
+
+}
+.logo img{
+    margin: 20px 0px;
+    width: 483.87px;
+    height: 110px;
+}
+.social-media{
+
+}
+.fab{
+    Width: 32px;
+    Height: 32px;
+    margin: 0px 14px;
+    color: gray;
+}
+.copyright{
+    font-size: 18px;
+    line-height: 24px;
+    color: #000000;
+    margin: 20px 0px;
+}
