--- a/css/style.css
+++ b/css/style.css
@@ -172,13 +172,19 @@ footer{
         font-size: 24px;
         text-align: center;
     }
+    .vedio-gallery{
+        margin-left: auto;
+        margin-right: auto;
+    }
     .partner-link{
         width: 100%;
         margin-left: auto;
         margin-right: auto;
     }
     .partner-image{
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        grid-row-gap: 30px;
     }
       /* footer section styles  */
       .logo img{
