--- a/css/style.css
+++ b/css/style.css
@@ -173,18 +173,16 @@ footer{
         text-align: center;
     }
     .vedio-gallery{
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .partner-link{
-        width: 100%;
-        margin-left: auto;
-        margin-right: auto;
-    }
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      }
     .partner-image{
-        grid-template-columns: repeat(3, 1fr);
-        gap: 20px;
-        grid-row-gap: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
     }
       /* footer section styles  */
       .logo img{
