--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ footer{
       }
      /* gallery and sponsorship section styles */
       .media-header{
-        font-size: 24px;
+        font-size: 30px;
         text-align: center;
     }
     .vedio-gallery{
@@ -183,6 +183,7 @@ footer{
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
+        margin-left: 25px;
     }
       /* footer section styles  */
       .logo img{
